# mini-agent

./: .gitignore  README.md  README_CN.md  pyproject.toml  two_sum.py
.mini_agent/: bash_audit.jsonl
benchmarks/: README_CN.md  __init__.py  agent_benchmark.py  module_benchmark.py
configs/: README.md  claude.yaml.example  deepseek.yaml.example  gpt.yaml.example
docs/: ARCHITECTURE_AND_DEVELOPMENT_CN.md
eval_suites/: checkpoint_resume_suite.yaml  comprehensive_agent_suite.yaml  context_governance_suite.yaml  observability_trace_suite.yaml  prompt_context_budget_suite.yaml  security_policy_suite.yaml  task_memory_suite.yaml
mini_agent/: agent.py  checkpoint.py  checkpointing.py  cli.py  config.py  console.py  context_budget.py  logger.py  prompt_builder.py  redaction.py  request_context.py  runtime.py  subagent.py  summarizer.py  token_accounting.py  tool_registry.py
mini_agent/acp/: __init__.py
outputs/: module-benchmark.json  module-benchmark.md
tests/: test_acp.py  test_agent.py  test_bash_tool.py  test_benchmark.py  test_cli_eval.py  test_compression.py  test_console.py  test_evals_metrics.py  test_evals_reporting.py  test_evals_runner.py  test_evals_scorers.py  test_evals_spec.py  test_evals_sqlite_store.py  test_evals_suite_loader.py  test_llm.py  test_llm_clients.py  test_logger_usage.py  test_mcp.py  test_module_benchmark.py  test_note_tool.py  test_observability_events.py  test_observability_sqlite_store.py  test_openai_prompt_cache.py  test_prompt_builder.py  test_request_context.py  test_runtime.py  test_session_integration.py  test_subagent.py  test_summarizer.py  test_task_memory_tool.py  test_token_accounting.py  test_tools.py
(+53 files in other folders)
